# Data-Structures-And-Algorithms-2021-2022

./: .gitignore  .gitignore.bak  README.md  arrayWalking.cpp  combinatorics.cpp  van Emde Boas.cpp
DAA/DCP/: at_most_k_distinct_substring.cpp  bazinga.cpp  bst_pair_sum_k.cpp  car_cdr.cpp  clelver_if_for_numbers.cpp  collatz.cpp  coloring.cpp  decoding_ways.cpp  find_duplicates_best.cpp  hanoi.cpp  interval_stamps.cpp  linked_list_integer.cpp  list_shift.cpp  longest_common_subsequence.cpp  max_sum_contiguous.cpp  max_sum_non_adjacent.cpp  minumum_adjacent_swaps.cpp  minumum_adjacent_swaps_hard.cpp  missing_number.cpp  palim_int.cpp  product_of_all_except_i.cpp  run_length_encoding.cpp  serialize_deserialize_binary_tree.cpp  square_root.cpp  triangle_tree.cpp  two_numbers_add_to_k..cpp  unival_tree.cpp  xor_dll.cpp
DAA/dp/: coin_change_ways.cpp  (+3 more)
DSA/: skiplist.hpp
Exam_31.01.2022/: 82140-1.cpp  82140-2.cpp  CMakeLists.txt
Homeworks/HW1/tests/1/src/: CMakeLists.txt  implementation.cpp  implementation.hpp  interface.h  tests.cpp
Homeworks/HW2/hw2_2/: CMakeLists.txt  command_parser.h  console.cpp  data_parser.cpp  data_parser.h  implementation.cpp  input_handler.cpp  input_handler.h  interface.h  my_tests.h  tests.cpp
Project/: quoestions_and_thoughts.txt
Project/tables_v1/: CMakeLists.txt  Cell.cpp  Cell.hpp  a.out  cellname.cpp  cellname.hpp  cellname_tests.hpp  command_handler.cpp  command_handler.hpp  console.cpp  console.out  expression_cell.cpp  expression_cell.hpp  expression_cell.hpp.bak  expression_lexer.cpp  expression_lexer.hpp  expression_token.cpp  expression_token.h  expression_tokenizer.cpp  expression_tokenizer.hpp  info.docx  input_handler.cpp  input_handler.hpp  main.cpp  numeric_value.cpp  numeric_value.hpp  numeric_value.hpp.bak  numeric_value_tests.hpp  string_cell.cpp  string_cell.hpp  string_cell_tests.hpp  string_helpers.cpp  string_helpers.hpp  string_operations_tests.hpp  table.cpp  table.hpp  table_tests.hpp  tests.cpp  ~$info.docx
avl/: AVL.hpp  CMakeLists.txt  README.md  avl.cpp  tests.cpp
dp/: knapsack.cpp  longest_common_subsequence.cpp  longest_increasing_subsequence.cpp  longest_palindromic_subsequence.cpp  max_increasing_subarray.cpp  min_squares_num_sum.cpp  simple_knapsack.cpp  staircase.cpp
lecture_materials/: BST.hpp  LList.cpp  LcRsTree.hpp  arrayWalking.cpp
seminars/: temps.cpp  trees_sem.cpp
sorting_algorithms/: hs.cpp
tasks1_a_d/: multiplication.cpp  trytempl.cpp
vanEmde/: CMakeLists.txt  README.md  main.cpp  tests.cpp  van Emde Boas.cpp  van Emde Boas.hpp
(+498 files in other folders)
